--- a/telco_customer_churn.ipynb
+++ b/telco_customer_churn.ipynb
@@ -2699,7 +2699,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 326
+          "height": 482
         },
         "id": "UuhbxzUSQtSO",
         "outputId": "4726dc03-b324-4110-d4b0-792513fd525e"
@@ -2806,7 +2806,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 771
+          "height": 1000
         },
         "id": "xOAexJvbcBc7",
         "outputId": "4e3b1bac-9974-4f0a-a2eb-61d7026077cf"
@@ -4440,27 +4440,7 @@
         "Customers with longer tenure tend to have significantly higher total charges.*\n",
         "\n",
         "*A positive correlation (0.65) indicates a moderate positive linear relationship between monthly charges and total charges.\n",
-        "Customers with higher monthly charges tend to have higher total charges, but the relationship is not as strong as tenure and total charges.*\n",
-        "\n",
-        "**12/1 feedback:**\n",
-        "- <=.3 low, >3 and <5 mid, >=5 high\n",
-        "- ask business user: what is easier to capture? tenure most likely, but total charges can vary by advice of the business user in these situations\n",
-        "- if you keep both, model may weigh them similar, if you remove 1 one then one's weight may increase a lot\n",
-        "- lasso (absolute of coefficient) or ridge (square of coefficients) - address multicolliniarity : way of regulariizing it\n",
-        "- https://www.datacamp.com/tutorial/tutorial-lasso-ridge-regression\n",
-        "\n",
-        "1. run model w everything (if p value goes higher remove it) see if scores improve or not\n",
-        "2. run it again w changes iteratively\n",
-        "\n",
-        "- discuss w business - what is your goal, certain accuracy? try to achieve their goal\n",
-        "- keep in mind how to explain it to them, to start w similar model makes sense\n",
-        "\n",
-        "- need a baseline model (logistic or linear - here its logistic bc binary classificiation)\n",
-        "- then improve on it - either increase feature or choose better models\n",
-        "- decision trees \"greedy model\" picks best and uses that but maybe that becomes outdated later-\n",
-        "- ensemble implements voting btwn models and finds maximum (importance of maximum)\n",
-        "- xgboost -\n",
-        "- idenitify what business user is alr using"
+        "Customers with higher monthly charges tend to have higher total charges, but the relationship is not as strong as tenure and total charges.*"
       ],
       "metadata": {
         "id": "ec0l2OwdnH7U"
@@ -7577,7 +7557,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 480
+          "height": 589
         },
         "id": "LkIS2dEjm5Wb",
         "outputId": "178c52fc-e18c-42ee-d76e-c74c5bad2134"
@@ -8771,7 +8751,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 459
+          "height": 589
         },
         "id": "JPE6lBvrYUjn",
         "outputId": "6c54c126-25e3-4f02-d39e-3efe51671862"
@@ -9972,7 +9952,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 488
+          "height": 589
         },
         "id": "E9tsb4xgmtnF",
         "outputId": "b3c212bf-7ae2-4a5d-a6db-a575d9d823c7"
@@ -11157,7 +11137,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 488
+          "height": 589
         },
         "id": "M1kFsF_oYv6z",
         "outputId": "37768008-4cce-4edd-898f-e31296968019"
